# shardyfusion

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  another-vector-search-proposal.md  architectural_review.md  architecture-map.html  justfile  mkdocs.yml  pyproject.toml  tox.ini
.claude/: hookify.pre-commit-ci-improvements.local.md  hookify.pre-commit-ci-run.local.md  hookify.pre-commit-docs.local.md  hookify.pre-commit-infra-sync.local.md  hookify.pre-commit-tox-sync.local.md
.claude/agents/: routing-contract-verifier.md
.claude/commands/: review-prioritized.md  review-two-pass.md
.claude/hooks/: auto-format.sh  protect-lockfile.sh
.devcontainer/: devcontainer.json
.github/: ci-matrix.json
.github/workflows/: ci.yml  docs.yml  release.yml
deploy-templates/: README.md
deploy-templates/airflow-dag/: README.md  snapshot_build_dag.py
deploy-templates/aws-lambda/: README.md  handler.py  requirements.txt  template.yaml
deploy-templates/fastapi-service/: Dockerfile  README.md  app.py  requirements.txt
docker/: ci.Dockerfile  compose-e2e.yaml  garage-e2e.Dockerfile  garage-entrypoint.sh  run-e2e.sh
docs/: api.md  cli.md  cloud-testing.md  error-handling.md  getting-started.md  glossary.md  how-it-works.md  index.md  manifest-stores.md  multi-engine-and-fusers-plan.md  observability.md  operations.md  reader-cli-plan.md  reader.md  release.md  retry-design-updates.md  test-coverage-gaps.md  tox-and-dependency-matrix.md  vector-search-over-sqlite-shards.md  vector-search-review.md  vector-search.md  writer.md
docs/architecture/: adapters.md  error-model.md  index.md  manifest-and-current.md  manifest-stores.md  observability.md  optional-imports.md  retry-and-cleanup.md  routing.md  run-registry.md  sharding.md  sqlite-btree-sidecar.md  sqlite-sidecar.md  writer-core.md
docs/contributing/: adding-a-use-case.md  adding-a-writer.md  adding-an-adapter.md  documentation-policy.md  extras-and-dependencies.md  index.md  local-development.md  testing.md
docs/engineering-notes/: 2026-03-14-manifest-history-and-rollback.md  2026-03-26-vector-search-options.md  2026-04-04-sharded-vector-search.md  2026-04-19-lancedb-vector-migration.md
docs/history/: index.md  reorg-notes.md
docs/operate/: cli.md  cloud-testing.md  history-rollback.md  index.md  otel-metrics.md  production.md  prometheus-metrics.md  tox-matrix.md
docs/operations/: index.md  tox-matrix.md
docs/plans/: narwhals-facade-plan.md
docs/reference/: api.md  cli.md  config.md  glossary.md  sqlite-btree-sidecar-format.md  sqlite-sidecar-format.md
docs/research/: high-performance-client.md
docs/stylesheets/: extra.css
docs/use-cases/: build-dask-slatedb.md  build-dask-sqlite.md  build-python-slatedb-lancedb.md  build-python-slatedb.md  build-python-sqlite-vec.md  build-python-sqlite.md  build-ray-slatedb.md  build-ray-sqlite.md  build-spark-slatedb.md  build-spark-sqlite.md  build-vector-lancedb-standalone.md  build-vector-sqlite-vec-standalone.md  extras-matrix.md  index.md  operate-cli.md  operate-manifest-history-and-rollback.md  operate-otel-metrics.md  operate-prometheus-metrics.md  read-async-slatedb.md  read-async-sqlite.md  read-sync-slatedb.md  read-sync-sqlite.md  shared-snapshot-workflow.md
docs/writers/: dask.md  python.md  ray.md  spark.md
examples/: README.md
examples/aws/: async_reader.py  concurrent_reader.py  dask_writer.py  python_writer.py  ray_writer.py  reader.py  spark_writer.py
examples/azure/: async_reader.py  dask_writer.py  python_writer.py  ray_writer.py  reader.py  spark_writer.py
examples/gcp/: async_reader.py  dask_writer.py  python_writer.py  ray_writer.py  reader.py  spark_writer.py
playground/: README.md  compose.yaml  run.py
pyright/: daskwriter.json  pythonwriter.json  raywriter.json  read-async.json  read.json  sparkwriter.json  sqlite.json
schemas/: current-pointer.schema.json  manifest.schema.json
scripts/: check_docs.py  generate_ci_matrix.py  generate_extras_matrix.py  generate_schemas.py
shardyfusion/: __init__.py  _adapter.py  _async_bridge.py  _checkpoint_id.py  _circuit_breaker.py  _local_snapshot_cache.py  _rate_limiter.py  _settings.py  _shard_writer.py  _slatedb_runtime.py  _slatedb_symbols.py  _sqlite_vfs.py  _writer_core.py  async_manifest_store.py  cel.py  composite_adapter.py  config.py  credentials.py  db_manifest_store.py  errors.py  local_slatedb_adapter.py  logging.py  manifest.py  manifest_readers.py  manifest_store.py  metrics.py  routing.py  run_registry.py  serde.py  sharding_types.py  slatedb_adapter.py  sqlite_adapter.py  sqlite_page_size.py  sqlite_query.py  sqlite_schema.py  sqlite_vec_adapter.py  storage.py  testing.py  type_defs.py
shardyfusion/cli/: __init__.py  app.py  batch.py  config.py  interactive.py  output.py
shardyfusion/metrics/: __init__.py  _events.py  _payloads.py  _protocol.py  otel.py  prometheus.py  tracing.py
shardyfusion/reader/: __init__.py  _base.py  _state.py  _types.py  async_reader.py  async_unified_reader.py  concurrent_reader.py  reader.py  unified_reader.py
shardyfusion/schemas/: __init__.py
shardyfusion/vector/: __init__.py  _distributed.py  _merge.py  async_reader.py  config.py  reader.py  sharding.py  types.py  writer.py
shardyfusion/writer/: __init__.py  _accumulators.py  _engine_page_size.py  _runtime.py
slatedb_spark_sharded/: __init__.py  _rate_limiter.py  _writer_core.py  config.py  errors.py  logging.py  manifest.py  manifest_readers.py  metrics.py  ordering.py  publish.py  python_writer.py  reader.py  routing.py  serde.py  sharding.py  sharding_types.py  slatedb_adapter.py  storage.py  testing.py  type_defs.py  writer.py
slatedb_spark_sharded/cli/: app.py  batch.py  config.py  interactive.py  output.py
slatedb_spark_sharded/reader/: __init__.py  reader.py
tests/: conftest.py
tests/e2e/: README.md  conftest.py
tests/helpers/: property_scenarios.py  ray_fixtures.py  run_record_assertions.py  s3_test_scenarios.py  sidecar.py  smoke_scenarios.py  sqlite_page_size_e2e.py  tracking.py  vector_s3_test_scenarios.py  (+1 more)
(+323 files in other folders)
