[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slatedb_spark_sharded"
version = "0.1.0"
description = "Sharded SlateDB snapshot writer for PySpark"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "slatedb_spark_sharded contributors"}]
license = "Apache-2.0"
dependencies = [
  "xxhash>=3.4",
  "pydantic>=2.0",
]

[project.optional-dependencies]
read = [
  "slatedb",
  "boto3>=1.28",
]
writer = [
  "pyspark>=3.3",
  "slatedb",
  "boto3>=1.28",
]
cli = [
  "click>=8.0",
  "pyyaml>=6.0",
]
all = [
  "pyspark>=3.3",
  "slatedb",
  "boto3>=1.28",
  "click>=8.0",
  "pyyaml>=6.0",
]
test = [
  "pytest>=7.4",
  "pytest-xdist>=3.6",
  "numpy>=1.24",
  "moto[server]>=5.0",
]
quality = [
  "ruff>=0.8.0",
  "ty>=0.0.17",
  "pyright>=1.1.390",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.26.0",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.0",
  "mkdocs-section-index>=0.3.9",
]

[project.scripts]
slate-reader = "slatedb_spark_sharded.cli.app:main"

[dependency-groups]
dev = [
  "tox>=4.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["slatedb_spark_sharded*"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
ignore = [
  "E501",
]
per-file-ignores = { "slatedb_spark_sharded/__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = [
  "slatedb_spark_sharded",
]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "build",
  "dist",
  "**/__pycache__",
  "**/.*",
]
reportArgumentType = "error"
reportMissingParameterType = "error"
reportUnsupportedDunderAll = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "spark: tests requiring local pyspark session",
  "e2e: end-to-end tests requiring a container engine (podman/docker)",
]
