[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shardyfusion"
version = "0.1.0"
description = "Sharded SlateDB snapshot writer/reader library (Spark, Dask, Python, CLI)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "shardyfusion contributors"}]
license = "Apache-2.0"
dependencies = [
  "xxhash>=3.4",
  "pydantic>=2.0",
]

[project.optional-dependencies]
read = [
  "slatedb",
  "boto3>=1.28",
]
writer-spark = [
  "pyspark>=3.3",
  "slatedb",
  "boto3>=1.28",
]
writer-python = [
  "slatedb",
  "boto3>=1.28",
]
writer-dask = [
  "dask[dataframe]>=2024.1",
  "slatedb",
  "boto3>=1.28",
]
writer-ray = [
  "ray[data]>=2.20",
  "slatedb",
  "boto3>=1.28",
]
cli = [
  "click>=8.0",
  "pyyaml>=6.0",
]
all = [
  "pyspark>=3.3",
  "dask[dataframe]>=2024.1; python_version<'3.14'",
  "ray[data]>=2.20; python_version<'3.14'",
  "slatedb",
  "boto3>=1.28",
  "click>=8.0",
  "pyyaml>=6.0",
]
test = [
  "pytest>=7.4",
  "pytest-xdist>=3.6",
  "pytest-cov>=5.0",
  "numpy>=1.24",
  "moto[server]>=5.0",
  "hypothesis>=6.0",
]
quality = [
  "ruff>=0.8.0",
  "pyright[nodejs]>=1.1.390",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.26.0",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.0",
  "mkdocs-section-index>=0.3.9",
]

[project.scripts]
slate-reader = "shardyfusion.cli.app:main"

[dependency-groups]
dev = [
  "tox>=4.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shardyfusion*"]

[tool.setuptools.package-data]
"shardyfusion.schemas" = ["*.json"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = [
  "E501",
  "UP042",
]
per-file-ignores = { "shardyfusion/__init__.py" = ["F401"], "shardyfusion/writer/spark/__init__.py" = ["F401"], "shardyfusion/writer/python/__init__.py" = ["F401"], "shardyfusion/writer/dask/__init__.py" = ["F401"], "shardyfusion/writer/ray/__init__.py" = ["F401"], "shardyfusion/reader/__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = [
  "shardyfusion",
]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "build",
  "dist",
  "**/__pycache__",
  "**/.*",
]
reportArgumentType = "error"
reportMissingParameterType = "error"
reportUnsupportedDunderAll = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "spark: tests requiring local pyspark session",
  "dask: tests requiring writer-dask extras",
  "ray: tests requiring writer-ray extras",
  "e2e: end-to-end tests requiring a container engine (podman/docker)",
]
