[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shardyfusion"
version = "0.1.0"
description = "Sharded SlateDB snapshot writer/reader library (Spark, Dask, Python, CLI)"
readme = "README.md"
# Python 3.14 support stays disabled until every reader, writer, and backend
# dependency used by the project is supported and exercised consistently.
requires-python = ">=3.11,<3.14"
authors = [{name = "shardyfusion contributors"}]
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "xxhash>=3.4",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "obstore>=0.4",
]

[project.optional-dependencies]
# Backend extras — storage engine deps only
slatedb = ["slatedb<0.12"]
sqlite = []
sqlite-range = ["apsw>=3.44"]

# Convenience extras — default backend is SlateDB
read = ["shardyfusion[slatedb]"]
read-async = ["shardyfusion[read]"]
read-sqlite = ["shardyfusion[sqlite]"]
read-sqlite-range = ["shardyfusion[sqlite-range]"]
# Adaptive composes both the download (sqlite) and range-read (sqlite-range) tiers
# so AdaptiveSqliteReaderFactory can resolve to either at runtime.
sqlite-adaptive = ["shardyfusion[sqlite]", "shardyfusion[sqlite-range]"]
read-sqlite-adaptive = ["shardyfusion[sqlite-adaptive]"]
sqlite-async = ["shardyfusion[read-sqlite]"]
sqlite-adaptive-async = ["shardyfusion[sqlite-adaptive]"]
writer-spark = [
  "shardyfusion[slatedb]",
  "pyspark>=3.3",
  "pandas>=2.2",
  "pyarrow>=15.0",
]
writer-spark-sqlite = [
  "shardyfusion[sqlite]",
  "pyspark>=3.3",
  "pandas>=2.2",
  "pyarrow>=15.0",
]
writer-python = ["shardyfusion[slatedb]"]
writer-python-sqlite = ["shardyfusion[sqlite]"]
writer-dask = [
  "shardyfusion[slatedb]",
  "dask[dataframe]>=2024.1",
]
writer-dask-sqlite = [
  "shardyfusion[sqlite]",
  "dask[dataframe]>=2024.1",
]
writer-ray = [
  "shardyfusion[slatedb]",
  "ray[data]>=2.20",
]
writer-ray-sqlite = [
  "shardyfusion[sqlite]",
  "ray[data]>=2.20",
]
cli-minimal = [
  "click>=8.0",
]
cli = [
  "shardyfusion[cli-minimal]",
  "shardyfusion[read]",
  "shardyfusion[read-async]",
  "shardyfusion[read-sqlite]",
  "shardyfusion[read-sqlite-range]",
  "shardyfusion[read-sqlite-adaptive]",
  "shardyfusion[sqlite-async]",
  "shardyfusion[sqlite-adaptive-async]",
  "shardyfusion[unified-vector]",
  "shardyfusion[unified-vector-sqlite]",
]
cel = ["cel-expr-python>=0.1"]
metrics-prometheus = ["prometheus-client>=0.20"]
metrics-otel = ["opentelemetry-api>=1.28"]
vector-lancedb = ["lancedb>=0.17", "pyarrow>=14.0", "numpy>=1.24"]
vector = ["shardyfusion[vector-lancedb]"]
vector-sqlite = ["sqlite-vec>=0.1", "numpy>=1.24"]
unified-vector = ["shardyfusion[vector]", "shardyfusion[cel]"]
unified-vector-sqlite = ["shardyfusion[vector-sqlite]", "shardyfusion[cel]"]
all = [
  "shardyfusion[read-async]",
  "shardyfusion[read-sqlite]",
  "shardyfusion[sqlite-range]",
  "shardyfusion[sqlite-adaptive]",
  "shardyfusion[sqlite-async]",
  "shardyfusion[sqlite-adaptive-async]",
  "shardyfusion[writer-spark]",
  "shardyfusion[writer-spark-sqlite]",
  "shardyfusion[writer-python]",
  "shardyfusion[writer-python-sqlite]",
  "shardyfusion[writer-dask]",
  "shardyfusion[writer-dask-sqlite]",
  "shardyfusion[writer-ray]",
  "shardyfusion[writer-ray-sqlite]",
  "shardyfusion[cli-minimal]",
  "shardyfusion[cli]",
  "shardyfusion[cel]",
  "shardyfusion[metrics-prometheus]",
  "shardyfusion[metrics-otel]",
  "shardyfusion[vector]",
  "shardyfusion[vector-sqlite]",
  "shardyfusion[unified-vector]",
  "shardyfusion[unified-vector-sqlite]",
]
test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-xdist>=3.6",
  "pytest-cov>=5.0",
  "numpy>=1.24",
  "moto[server]>=5.0",
  "hypothesis>=6.0",
  "opentelemetry-sdk>=1.28",
]
quality = [
  "ruff>=0.8.0",
  "pyright[nodejs]>=1.1.390",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.26.0",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.0",
  "mkdocs-section-index>=0.3.9",
]

[project.urls]
Documentation = "https://elkin.github.io/shardyfusion/"
Repository = "https://github.com/elkin/shardyfusion"
Issues = "https://github.com/elkin/shardyfusion/issues"
Changelog = "https://github.com/elkin/shardyfusion/blob/main/CHANGELOG.md"

[project.scripts]
shardy = "shardyfusion.cli.app:main"

[dependency-groups]
backend-slatedb = [
  "slatedb<0.12",
]
backend-sqlite = []
backend-sqlite-vec = [
  "sqlite-vec>=0.1",
]
backend-vector-lancedb = [
  "lancedb>=0.17",
  "pyarrow>=14.0",
]
backend-sqlite-range = [
  "apsw>=3.44",
]
cap-writer-spark = [
  "pyspark>=3.3",
  "pandas>=2.2",
  "pyarrow>=15.0",
]
cap-writer-dask = [
  "dask[dataframe]>=2024.1",
]
cap-writer-ray = [
  "ray[data]>=2.20",
]
cap-cli = [
  "click>=8.0",
]
mod-cel = [
  "cel-expr-python>=0.1",
]
mod-metrics-prometheus = [
  "prometheus-client>=0.20",
]
mod-metrics-otel = [
  "opentelemetry-api>=1.28",
]
dev = [
  "tox>=4.11",
  "tox-uv>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shardyfusion*"]

[tool.setuptools.package-data]
shardyfusion = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
  ".claude",
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = [
  "E501",
  "UP042",
]
per-file-ignores = { "shardyfusion/__init__.py" = ["F401"], "shardyfusion/writer/spark/__init__.py" = ["F401"], "shardyfusion/writer/python/__init__.py" = ["F401"], "shardyfusion/writer/dask/__init__.py" = ["F401"], "shardyfusion/writer/ray/__init__.py" = ["F401"], "shardyfusion/reader/__init__.py" = ["F401"], "shardyfusion/metrics/__init__.py" = ["F401"], "tests/**/test_*cel*.py" = ["E402"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = [
  "shardyfusion",
]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "build",
  "dist",
  "**/__pycache__",
  "**/.*",
]
reportArgumentType = "error"
reportMissingParameterType = "error"
reportUnsupportedDunderAll = false

[tool.coverage.run]
source = ["shardyfusion"]
branch = true

[tool.coverage.paths]
source = [
    "shardyfusion/",
    ".tox/**/site-packages/shardyfusion/",
]

[tool.coverage.report]
show_missing = true
precision = 1
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "\\.\\.\\.",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "spark: tests requiring local pyspark session",
  "dask: tests requiring writer-dask extras",
  "ray: tests requiring writer-ray extras",
  "cel: tests requiring cel extra (cel-expr-python)",
  "e2e: end-to-end tests requiring a container engine (podman/docker)",
  "vector: tests requiring vector extras (lancedb, pyarrow, numpy)",
  "vector_sqlite: tests requiring vector-sqlite extra (sqlite-vec)",
]
